Created delete article route/button and added images

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <div id="wrapper">
     <div class="container">
       <h1>Note Scraper</h1>
-      <h2>Scrape <a href="/scrape" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ski Racing
+      <h2>Scrape <button type="button" id="scrape" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ski Racing
           Web Site</a></h2>
       <div id="articles">
 
