--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,19 @@
   <div id="wrapper">
     <div class="container">
       <h1>Note Scraper</h1>
-      <h2>Scrape <button type="button" id="scrape" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ski Racing
+      <h2>Scrape <button type="button" id="scrape" class="btn btn-primary btn-lg active" role="button"
+          aria-pressed="true">Ski Racing
           Web Site</a></h2>
-      <div id="articles">
-
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+              <div id="articles">
+                </div>
+          </div>
+          
+        </div>
       </div>
+
       <div id="notes"></div>
     </div>
   </div>
@@ -41,16 +49,16 @@
           </button>
         </div>
         <div class="modal-body">
-            <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="col-form-label">Title:</label>
-                  <input type="text" class="form-control" id="note-title">
-                </div>
-                <div class="form-group">
-                  <label for="message-text" class="col-form-label">Text:</label>
-                  <textarea class="form-control" id="note-body"></textarea>
-                </div>
-              </form>
+          <form>
+            <div class="form-group">
+              <label for="recipient-name" class="col-form-label">Title:</label>
+              <input type="text" class="form-control" id="note-title">
+            </div>
+            <div class="form-group">
+              <label for="message-text" class="col-form-label">Text:</label>
+              <textarea class="form-control" id="note-body"></textarea>
+            </div>
+          </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
