Changed the way the button passes the id for savenote

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   <!-- Modal for the Note Insert -->
-  <div class="modal fade" id="notesModal" tabindex="-1" role="dialog" aria-labelledby="notesModalLabel"
+  <div class="modal fade notesModal" tabindex="-1" role="dialog" aria-labelledby="notesModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
