More styles and updated field display

--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,14 @@
               <button id="scrape" class="btn btn-light btn-lg active" type="button">Scrape Ski Racing News!</button>
             </form>
       </nav>
-
       <div class="container">
-        <div class="row">
-          <div id="articles">
-          </div>
+          <div class="row" >
+              <div class="row" id="articles" >
+              </div>
+         </div>       
 
-        </div>
       </div>
-
+          
       <div id="notes"></div>
     </div>
   </div>
